Added composer.json and core requirements

--- a/commerce_exchanger_hnb.info.yml
+++ b/commerce_exchanger_hnb.info.yml
@@ -1,8 +1,10 @@
 name: 'Commerce Exchanger HNB'
 type: module
 description: 'Commerce 2 Exchange Rates from Croatian National Bank (HNB)'
-core: 8.x
+core_version_requirement: ^8 || ^9
 package: Commerce (Contrib)
 
 dependencies:
   - commerce_exchanger:commerce_exchanger
+
+php: 7.0
